--- a/apps/uscope/src/App.css
+++ b/apps/uscope/src/App.css
@@ -131,15 +131,16 @@
     --sidebar-ring: oklch(0.556 0 0);
 }
 
-html, body {
-  font-family: 'Geist Sans', ui-sans-serif, system-ui;
+html,
+body {
+    font-family: 'Geist Sans', ui-sans-serif, system-ui;
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
+    html, body {
+        @apply bg-background text-foreground;
     }
-  body {
-    @apply bg-background text-foreground;
+    * {
+        @apply border-border outline-ring/50;
     }
 }
